modules/gdscript/tests/scripts/parser/errors/property_expected_token.gd
var x:
	get: return 1
	invalid_keyword: pass

func test():
	pass
